--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,20 +3,38 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% set metaTitle = title or site.title %}
-    {% set metaDescription = description or site.description %}
-    {% set metaImage = image or site.image %}
+    {% set canonicalUrl = page.url | toAbsoluteUrl %}
+    {% set metaTitle = (seo_title or title or site.title) %}
+    {% set rawDescription = (seo_description or description) %}
+    {% set autoExcerpt = content | excerpt(155) %}
+    {% set metaDescription = (rawDescription | default(autoExcerpt) | default(site.description)) %}
+    {% set rawImage = seo_image or image or site.image %}
+    {% set metaImage = rawImage | toAbsoluteUrl %}
+    {% set metaOgType = og_type or "website" %}
     <title>{{ metaTitle }}</title>
-    <meta name="description" content="{{ metaDescription }}">
-    <meta property="og:type" content="website">
+    {% if metaDescription %}
+      <meta name="description" content="{{ metaDescription }}">
+    {% endif %}
+    <link rel="canonical" href="{{ canonicalUrl }}">
+    <meta property="og:site_name" content="{{ site.title }}">
+    <meta property="og:type" content="{{ metaOgType }}">
     <meta property="og:title" content="{{ metaTitle }}">
-    <meta property="og:description" content="{{ metaDescription }}">
-    <meta property="og:image" content="{{ metaImage }}">
-    <meta property="og:url" content="{{ site.url ~ page.url }}">
+    {% if metaDescription %}
+      <meta property="og:description" content="{{ metaDescription }}">
+    {% endif %}
+    <meta property="og:url" content="{{ canonicalUrl }}">
+    {% if metaImage %}
+      <meta property="og:image" content="{{ metaImage }}">
+      <meta property="og:image:secure_url" content="{{ metaImage }}">
+      <meta property="og:image:alt" content="{{ metaTitle }}">
+      <meta name="twitter:image" content="{{ metaImage }}">
+      <meta name="twitter:image:alt" content="{{ metaTitle }}">
+    {% endif %}
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ metaTitle }}">
-    <meta name="twitter:description" content="{{ metaDescription }}">
-    <meta name="twitter:image" content="{{ metaImage }}">
+    {% if metaDescription %}
+      <meta name="twitter:description" content="{{ metaDescription }}">
+    {% endif %}
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }} RSS" href="/feed.xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
