Use explicit sitemap URL in robots.txt

--- a/robots.njk
+++ b/robots.njk
@@ -4,6 +4,6 @@ eleventyExcludeFromCollections: true
 layout: null
 ---
 User-agent: *
-Disallow: /tags/
 Disallow: /admin
 Disallow: /README/
+Sitemap: https://blog.textmylink.com/sitemap.xml
