--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -299,6 +299,15 @@ main > *:first-child {
   font-size: 0.85rem;
 }
 
+.post-card--hidden {
+  display: none;
+}
+
+.infinite-scroll-sentinel {
+  width: 100%;
+  height: 1px;
+}
+
 .pagination {
   display: flex;
   justify-content: space-between;
