Remove newest story placeholder text

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -99,7 +99,7 @@
     {% else %}
       <span class="neighbor-posts__placeholder">
         <span class="neighbor-posts__label">Previous Post</span>
-        <span class="neighbor-posts__title">You're reading the newest story.</span>
+        <span class="neighbor-posts__title"></span>
       </span>
     {% endif %}
   </nav>
