--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -104,3 +104,12 @@
     {% endif %}
   </nav>
 {% endblock %}
+
+{% block scripts %}
+  {{ super() }}
+  <script
+    data-goatcounter="https://textmylinkblog.goatcounter.com/count"
+    async
+    src="//gc.zgo.at/count.js"
+  ></script>
+{% endblock %}
